--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -32,7 +32,7 @@ const { title = "Vega Portfolio" } = Astro.props;
     </header>
 
     <!-- MAIN CONTENT SLOT  -->
-    <main class="max-w-7xl mx-auto p-4">
+    <main>
       <slot />
     </main>
 
