--- a/src/components/sections/HeroSectionImage.astro
+++ b/src/components/sections/HeroSectionImage.astro
@@ -22,21 +22,21 @@ const {
 const alignClass = align === "center" ? "items-center text-center" : "items-start text-left";
 ---
 
-<div class="relative w-full h-[70vh] md:h-[80vh] overflow-hidden">
-
+<div class="relative w-full h-full md:h-[80vh] overflow-hidden">
     <!-- Background Image -->
     <img
         src={image}
         alt={title}
-        class="absolute inset-0 w-full h-full object-cover"
+        class="md:absolute relative  inset-0 w-full h-full object-cover"
     />
-
     <!-- Overlay -->
      <div class="absolute inset-0 bg-black/50"></div>
+    
+</div>
 
      <!-- Content Wrapper -->
-    <div class={`absolute inset-0 flex flex-col justify-center gap-4 px-6 max-w-3xl mx-auto ${alignClass}`}>
-
+<div class="relative md:absolute md:inset-0 z-10 flex justify-center items-center md:px-4 px-0">
+  <div class={`w-full md:max-w-3xl max-w-full md:bg-transparent bg-slate-800/95 px-6 py-10 md:py-12 ${alignClass}`}>
     <h1 class="text-3xl md:text-5xl font-extrabold text-white drop-shadow-lg">
       {title}
     </h1>
@@ -50,7 +50,7 @@ const alignClass = align === "center" ? "items-center text-center" : "items-star
     <!-- CTA Buttons -->
     <div class="flex gap-4 mt-4"
       class:list={[align === "center" && "justify-center"]}>
-      
+        
       {primaryAction && (
         <Button variant="primary" href={primaryAction.href}>
           {primaryAction.label}
@@ -64,5 +64,5 @@ const alignClass = align === "center" ? "items-center text-center" : "items-star
       )}
     </div>
   </div>
-
 </div>
+
