--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,7 +17,7 @@ const { title = "Vega Portfolio" } = Astro.props;
 
   <body class="min-h-screen bg-white text-slate-700">
     <!-- HEADER -->
-    <header class="border-b">
+    <header class="border-b relative z-10">
       <nav class="max-w-7xl mx-auto p-4 flex justify-between">
         <!-- Site name -->
         <a href="/" class="font-bold">Vega</a>
