--- a/src/components/ui/ProjectsGrid.astro
+++ b/src/components/ui/ProjectsGrid.astro
@@ -1,25 +1,16 @@
 ---
 import ProjectCard from "./ProjectCard.astro";
+import type { Project } from "../../data/projects";
 
 interface Props {
-    projects: {
-        title: string;
-        description: string;
-        image: string;
-        href: string;
-    }[];
+  projects: Project[];
 }
 
 const { projects } = Astro.props;
 ---
 
 <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
-    {projects.map(project => (
-        <ProjectCard
-            title={project.title}
-            description={project.description}
-            image={project.image}
-            href={project.href}
-        />
-    ))}
+  {projects.map((project) => (
+    <ProjectCard project={project} />
+  ))}
 </div>
