updated index.html project structure

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import Button from '../components/ui/Button.astro';
 
   <HeroSection
     eyebrow='PRATICE SHEET'
-    title='Vega is try to ascend yow'
+    title='Vega is trying to ascend yow'
     description='tailwind play, all about front-end, lets go'
     align='left'
     primaryAction={{label: 'Learn More', href: '/projects'}}
