--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,8 +30,7 @@ import Button from '../components/ui/Button.astro';
 
   />
 
-  
-  <ProjectsSection projects={projects} />
+  <ProjectsSection projects={projects.slice(0, 3)} />
 
   <Section variant="default">
     <SectionHeader
